# adam

./: adam.opam  dune-project
src/: adam.ml  adam.mli  dune  sgd.ml  sgd.mli
