opam-version: "2.0"
maintainer: "Hennequin Lab"
authors: [ "Hennequin Lab" ]
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {build & >= "1.1.0"}
  "base"
  "owl" {>= "0.4.0"}
]
synopsis: "Adam SGD"
